apple 로그인 구현

--- a/ToyProjectManagementApp/Views/ForthTabbar.storyboard
+++ b/ToyProjectManagementApp/Views/ForthTabbar.storyboard
@@ -26,27 +26,33 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbW-xC-Ns5">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbW-xC-Ns5">
                                         <rect key="frame" x="14" y="57.333333333333336" width="365" height="20.333333333333336"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="social" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vct-5V-ATT">
+                                        <rect key="frame" x="14" y="87.666666666666657" width="365" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H1b-FO-8Ec">
-                                        <rect key="frame" x="0.0" y="101.66666666666666" width="393" height="9"/>
+                                        <rect key="frame" x="0.0" y="132" width="393" height="9"/>
                                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="9" id="8ZG-RQ-pz2"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="활동내역" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O4r-NQ-zFP">
-                                        <rect key="frame" x="14" y="134.66666666666666" width="365" height="20.333333333333343"/>
+                                        <rect key="frame" x="14" y="165" width="365" height="20.333333333333343"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="YUk-Eq-2uX">
-                                        <rect key="frame" x="14" y="175" width="365" height="57.666666666666657"/>
+                                        <rect key="frame" x="14" y="205.33333333333331" width="365" height="57.666666666666686"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="DvG-gv-CgV">
                                                 <rect key="frame" x="0.0" y="0.0" width="121.66666666666667" height="57.666666666666664"/>
@@ -58,7 +64,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="총 프로젝트" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WqS-XN-Bdr">
-                                                        <rect key="frame" x="0.0" y="37.333333333333314" width="121.66666666666667" height="20.333333333333329"/>
+                                                        <rect key="frame" x="0.0" y="37.333333333333371" width="121.66666666666667" height="20.333333333333329"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" red="0.52941176470588236" green="0.52941176470588236" blue="0.52941176470588236" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -75,7 +81,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="진행중" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7KP-7U-HaA">
-                                                        <rect key="frame" x="0.0" y="37.333333333333314" width="121.66666666666667" height="20.333333333333329"/>
+                                                        <rect key="frame" x="0.0" y="37.333333333333371" width="121.66666666666667" height="20.333333333333329"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" red="0.52941176470588236" green="0.52941176470588236" blue="0.52941176470588236" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -92,7 +98,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="완료" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q97-LH-8jK">
-                                                        <rect key="frame" x="0.0" y="37.333333333333314" width="121.66666666666667" height="20.333333333333329"/>
+                                                        <rect key="frame" x="0.0" y="37.333333333333371" width="121.66666666666667" height="20.333333333333329"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" red="0.52941176470588236" green="0.52941176470588236" blue="0.52941176470588236" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -102,14 +108,14 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pFV-UG-5oz">
-                                        <rect key="frame" x="0.0" y="256.66666666666669" width="393" height="9"/>
+                                        <rect key="frame" x="0.0" y="287" width="393" height="9"/>
                                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="9" id="QRm-T7-E2l"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="JPk-DW-mnT">
-                                        <rect key="frame" x="14" y="265.66666666666669" width="365" height="110"/>
+                                        <rect key="frame" x="14" y="296" width="365" height="110"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pBB-oj-pQf">
                                                 <rect key="frame" x="0.0" y="0.0" width="365" height="55"/>
@@ -131,7 +137,7 @@
                                                                 </connections>
                                                             </button>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Y29-OG-ou0">
-                                                                <rect key="frame" x="345" y="19.666666666666629" width="20" height="16.333333333333329"/>
+                                                                <rect key="frame" x="345" y="19.666666666666686" width="20" height="16.333333333333329"/>
                                                                 <color key="tintColor" red="0.82352941176470584" green="0.82352941176470584" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="EfN-FN-TxZ"/>
@@ -169,7 +175,7 @@
                                                                 </connections>
                                                             </button>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CGU-El-eVT">
-                                                                <rect key="frame" x="345" y="19.666666666666629" width="20" height="16.333333333333329"/>
+                                                                <rect key="frame" x="345" y="19.666666666666686" width="20" height="16.333333333333329"/>
                                                                 <color key="tintColor" red="0.82352941176470584" green="0.82352941176470584" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="20" id="1Tg-JB-NLt"/>
@@ -195,6 +201,7 @@
                                     <constraint firstItem="fO7-nE-phV" firstAttribute="leading" secondItem="5vH-tx-gsS" secondAttribute="leading" constant="14" id="2u6-QX-WXF"/>
                                     <constraint firstItem="H1b-FO-8Ec" firstAttribute="leading" secondItem="5vH-tx-gsS" secondAttribute="leading" id="4en-fl-UsQ"/>
                                     <constraint firstItem="O4r-NQ-zFP" firstAttribute="leading" secondItem="fO7-nE-phV" secondAttribute="leading" id="4po-Ly-dAb"/>
+                                    <constraint firstItem="Vct-5V-ATT" firstAttribute="leading" secondItem="sbW-xC-Ns5" secondAttribute="leading" id="9im-lh-yMx"/>
                                     <constraint firstItem="pFV-UG-5oz" firstAttribute="top" secondItem="YUk-Eq-2uX" secondAttribute="bottom" constant="24" id="AyE-Id-sry"/>
                                     <constraint firstAttribute="trailing" secondItem="pFV-UG-5oz" secondAttribute="trailing" id="BvW-FP-epe"/>
                                     <constraint firstAttribute="trailing" secondItem="H1b-FO-8Ec" secondAttribute="trailing" id="E5Y-3r-Rpg"/>
@@ -202,13 +209,15 @@
                                     <constraint firstItem="JPk-DW-mnT" firstAttribute="trailing" secondItem="YUk-Eq-2uX" secondAttribute="trailing" id="GIE-aQ-JA8"/>
                                     <constraint firstItem="O4r-NQ-zFP" firstAttribute="trailing" secondItem="fO7-nE-phV" secondAttribute="trailing" id="I0L-6x-b9d"/>
                                     <constraint firstItem="JPk-DW-mnT" firstAttribute="leading" secondItem="YUk-Eq-2uX" secondAttribute="leading" id="Nj0-kL-UHp"/>
+                                    <constraint firstItem="Vct-5V-ATT" firstAttribute="top" secondItem="sbW-xC-Ns5" secondAttribute="bottom" constant="10" id="P6J-b4-gkZ"/>
                                     <constraint firstItem="YUk-Eq-2uX" firstAttribute="trailing" secondItem="O4r-NQ-zFP" secondAttribute="trailing" id="Snc-be-uDZ"/>
                                     <constraint firstItem="JPk-DW-mnT" firstAttribute="top" secondItem="pFV-UG-5oz" secondAttribute="bottom" id="TY6-CS-cgm"/>
                                     <constraint firstItem="YUk-Eq-2uX" firstAttribute="top" secondItem="O4r-NQ-zFP" secondAttribute="bottom" constant="20" id="XAp-JQ-ibn"/>
                                     <constraint firstItem="sbW-xC-Ns5" firstAttribute="trailing" secondItem="fO7-nE-phV" secondAttribute="trailing" id="YIh-wZ-HKH"/>
+                                    <constraint firstItem="Vct-5V-ATT" firstAttribute="trailing" secondItem="sbW-xC-Ns5" secondAttribute="trailing" id="bN7-FT-Kcs"/>
+                                    <constraint firstItem="H1b-FO-8Ec" firstAttribute="top" secondItem="Vct-5V-ATT" secondAttribute="bottom" constant="24" id="bSe-mu-6VZ"/>
                                     <constraint firstItem="sbW-xC-Ns5" firstAttribute="leading" secondItem="fO7-nE-phV" secondAttribute="leading" id="cA9-XY-esJ"/>
                                     <constraint firstAttribute="trailing" secondItem="fO7-nE-phV" secondAttribute="trailing" constant="14" id="dtz-IU-kDN"/>
-                                    <constraint firstItem="H1b-FO-8Ec" firstAttribute="top" secondItem="sbW-xC-Ns5" secondAttribute="bottom" constant="24" id="eYX-jS-tru"/>
                                     <constraint firstItem="O4r-NQ-zFP" firstAttribute="top" secondItem="H1b-FO-8Ec" secondAttribute="bottom" constant="24" id="h37-lH-LGI"/>
                                     <constraint firstItem="YUk-Eq-2uX" firstAttribute="leading" secondItem="O4r-NQ-zFP" secondAttribute="leading" id="hgL-ET-5Tc"/>
                                     <constraint firstItem="pFV-UG-5oz" firstAttribute="leading" secondItem="5vH-tx-gsS" secondAttribute="leading" id="nV2-IT-jdu"/>
@@ -239,6 +248,7 @@
                         <outlet property="resetPasswordButton" destination="4bi-7Y-ca7" id="WfA-cE-o1G"/>
                         <outlet property="resetPasswordView" destination="iTK-4Y-DGD" id="amI-K9-meE"/>
                         <outlet property="signOutButton" destination="5hZ-kz-Smb" id="zEK-er-S2x"/>
+                        <outlet property="socialLabel" destination="Vct-5V-ATT" id="Bu9-hD-qLG"/>
                         <outlet property="totalProjectCountLabel" destination="ftd-wx-BFj" id="kcT-9E-SSP"/>
                         <outlet property="totalProjectLabel" destination="WqS-XN-Bdr" id="Mhp-qJ-55G"/>
                     </connections>
